# PhotoFormatConverter

./: CMakeLists.txt  README.md
include/: stb_image_write.h
scripts/: README.md  copy_libs.sh  look.sh
src/: MainWindow.cpp  MainWindow.h  converter.cpp  converter.h  main.cpp
src/dialogs/: ExportDialog.cpp  ExportDialog.h
